# MOCE_SDK_ESP32WROOM

./: .gitignore  CLAUDE.md  README.md  SKILL.md
.claude/: cloude-code-toolbox-mcp-skills-awareness.md
.tmp_chm_vc02/: annotated.html  chanpinshuoming.html  classes.html  dajiankaifahuanjing.html  dir_24f3ee575decadb4b98224df346b9d32.html  dir_3c26442180f88292034cb714d27308c5.html  dir_9aa875ca4c9e753c17b9b0b545e3fff2.html  dir_b24818e8206cdce570ff3dc5fbc2b706.html  dir_c9e3dff02d1317b03796beddd6a42f4a.html  dir_cabe15574c645125bfdd136dfffa273d.html  dir_dea77078256a025a760a4b07b937c99b.html  ercikaifa.html  functions.html  functions_vars.html  group__gpio__example1.html  group__gpio__example2.html  group__hb__housekeeper.html  group__hb__smart__ac.html  group__timer__example1.html  group__timer__example2.html  group__uni__asr.html  group__uni__asr__example.html  group__uni__asr__example__1.html  group__uni__asr__inf.html  group__uni__asr__note.html  group__uni__communication.html  group__uni__communication__example.html  group__uni__communication__example__1.html  group__uni__communication__example__sucp.html  group__uni__communication__inf.html  group__uni__communication__note.html  group__uni__communication__sucp__example.html  group__uni__communication__sucp__note.html  group__uni__config__asr__macro.html  group__uni__config__audio__macro.html  group__uni__config__communication__macro.html  group__uni__config__demo__macro.html  group__uni__config__gpio__macro.html  group__uni__config__macro.html  group__uni__config__uart__macro.html  (+75 more)
SDK_prompt/: sdk_develop.md
agent/: .gitignore  README.md  config.example.json  package-lock.json  package.json
agent/prompts/: sdk-codegen.md  system.md
agent/public/: app.js  index.html  styles.css
agent/server/: index.js
agent/skills/: ai-schematic-generation.md  component-selection.md  datasheet-extraction.md  firmware-draft-generation.md  hardware-resource-planning.md  requirement-analysis-hardware-breakdown.md  skillset-1-planning.md  skillset-2-hardware-module.md  skillset-3-schematic.md
boards/my_board_esp32/: board.h  sdkconfig.defaults
boards/my_board_esp32s3/: board.h  sdkconfig.defaults
boards/my_board_esp32wroom/: board.h  (+1 more)
bsp/bsp_board/: CMakeLists.txt
bsp/bsp_board/include/: board.h
components/bsp_board/: CMakeLists.txt
components/bsp_board/include/: board.h
env/: export.sh  install.sh
project/robot_agent_app/main/: CMakeLists.txt  main.c
prompt/: prompt0.md
tools/: build.ps1  build.sh  clean.sh  flash.ps1  flash.sh  monitor.ps1  monitor.sh  monitor_capture.py
(+267 files in other folders)
